# agentnative

./: .gitignore  CLAUDE.md  config.json  e2e-all-stages-results.json  events.jsonl  package.json  plan.md  start-agentnative.cmd  start-agentnative.vbs
.claude-plugin/: plugin.json
.github/: copilot-instructions.md
claude-teams/: deep-bug-debate-team.md  implement-plan-team.md  research-and-plan-team.md  small-change-team.md
isa-kb-mcp-server/: pyproject.toml
isa-kb-mcp-server/data/: .gitignore
isa-kb-mcp-server/scripts/: audit_ingestion.py  dup_check2.py  ingest_guides.py  ingest_isa.py  setup_infra.py  update_kb.py
isa-kb-mcp-server/src/isa_kb_mcp_server/: __init__.py  __main__.py  context.py  db.py  diagnostics.py  graph.py  paragraphs.py  query_expand.py  rerank.py  schema.sql  search.py  vectors.py  verify.py  web_search.py
isa-kb-mcp-server/src/isa_kb_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
isa-kb-mcp-server/tests/: test_guide_integration.py  test_ingest_guides.py  test_integration.py  test_tools.py
labels/: config.json
plans/: 260216-agent-quality-hardening.md  260216-subagent-abort-propagation.md  260217-stage-gate-pause-enforcement.md  260218-agent-branch-hygiene.md  260218-agent-default-sources.md  260218-agent-overhaul-e2e-framework-complete.md  260218-agent-overhaul-e2e-framework.md  260218-auto-enable-agent-sources.md  260218-generic-e2e-test-framework.md  260218-isa-websearch-intent-clarification.md  260218-natural-completion-stage-gate.md  260218-stage-gate-diagnostics-logging.md  (+10 more)
(+161 files in other folders)
