[project]
name = "isa-kb-mcp-server"
version = "0.1.0"
description = "ISA Knowledge Base MCP server with hybrid search, graph traversal, and verification"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "duckdb>=1.2.0",
    "lancedb>=0.17.0",
    "voyageai>=0.3.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "flashrank>=0.2.0",
    "httpx>=0.27.0",
    "trafilatura>=2.0.0",
    "azure-ai-documentintelligence>=1.0.0",
    "azure-core>=1.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
